NEW 1.pdf2table.md & script

--- a/assets/pdfs/1.pdf2table.md
+++ b/assets/pdfs/1.pdf2table.md
@@ -1,94 +1,99 @@
+---
+layout: post
+title: IRS Docs and Subject Table
+---
+ 
 |Document No.|Title|
-|---|---|
-|1|<a href="f1040es.pdf" download>           2024 Form 1040-ES</a>|
-|2|<a href="f1040s1.pdf" download>           2023 Schedule 1 (Form 1040)</a>|
-|3|<a href="f1040s2.pdf" download>           2023 Schedule 2 (Form 1040)</a>|
-|4|<a href="f1040s3.pdf" download>           2023 Schedule 3 (Form 1040)</a>|
-|5|<a href="f1040s.pdf" download>           2023 Form 1040-SR</a>|
-|6|<a href="f1040x.pdf" download>           Form 1040-X (Rev. February 2024)</a>|
-|7|<a href="f1041.pdf" download>           2023 Form 1041 </a>|
-|8|<a href="f1065.pdf" download>           2023 Form 1065 </a>|
-|9|<a href="f1099c.pdf" download>           Form 1099-C (Rev. January 2022)</a>|
-|10|<a href="f1099r.pdf" download>           2024 Form 1099-R</a>|
-|11|<a href="f1116.pdf" download>           2023 Form 1116</a>|
-|12|<a href="f1120.pdf" download>           2023 Form 1120</a>|
-|13|<a href="f1127.pdf" download>           Form 1127 (Rev. December 2020)</a>|
-|14|<a href="f12153.pdf" download>           Form 12153 (Rev. 7-2022)</a>|
-|15|<a href="f13614c.pdf" download>           Form 13614-C (Rev. 10-2023)</a>|
-|16|<a href="f14039.pdf" download>           Form 14039 (Rev. 5-2024)</a>|
-|17|<a href="f2555.pdf" download>           2023 Form 2555</a>|
-|18|<a href="f2587.pdf" download>           Form 2587 (Rev. 3-2024) </a>|
-|19|<a href="f2848.pdf" download>           Form 2848 (Rev. January 2021)</a>|
-|20|<a href="f3520.pdf" download>           Form 3520 (Rev. December 2023)</a>|
-|21|<a href="f4506.pdf" download>           Form 4506 (Rev. 1-2024)</a>|
-|22|<a href="f4506t.pdf" download>           Form 4506-T (Rev. 6-2023)</a>|
-|23|<a href="f4868-auto-extension.pdf" download>           2023 Form 4868</a>|
-|24|<a href="f5471.pdf" download>           Form 5471 (Rev. December 2023)</a>|
-|25|<a href="f706.pdf" download>           Form 706 (Rev. August 2019)</a>|
-|26|<a href="f843.pdf" download>           Form 843 (Rev. August 2011)</a>|
-|27|<a href="f8453.pdf" download>           2023 Form 8453</a>|
-|28|<a href="f8606.pdf" download>           2023 Form 8606</a>|
-|29|<a href="f8814.pdf" download>           2023 Form 8814</a>|
-|30|<a href="f8821.pdf" download>           Form 8821 (Rev. January 2021)</a>|
-|31|<a href="f8879.pdf" download>           Form 8879 (Rev. January 2021)</a>|
-|32|<a href="f8938.pdf" download>           Form 8938 (Rev. November 2021)</a>|
-|33|<a href="f8958.pdf" download>           Form 8958 (Rev. November 2023)</a>|
-|34|<a href="f941.pdf" download>           Form 941 (Rev. March 2024)</a>|
-|35|<a href="f9465.pdf" download>           Form 9465 (Rev. September 2020)</a>|
-|36|<a href="filing_status_4012.pdf" download>           Publication 4012 (Rev. 10/2021)</a>|
-|37|<a href="fss4.pdf" download>           Form SS-4 (Rev. December 2023)</a>|
-|38|<a href="fw2.pdf" download>           2024 Form W-2</a>|
-|39|<a href="fw4.pdf" download>           2024 Form W-4</a>|
-|40|<a href="fw7.pdf" download>           Form W-7 (Rev. August 2019)</a>|
-|41|<a href="fw7sp.pdf" download>           Form W-7 (SP) (Rev. September 2019)</a>|
-|42|<a href="fw9.pdf" download>           Form W-9 (Rev. March 2024)</a>|
-|43|<a href="i1040gi.pdf" download>           2023 Instruction 1040</a>|
-|44|<a href="i1040tt.pdf" download>           2023 Instruction 1040 TAX AND EARNED INCOME CREDIT TABLES</a>|
-|45|<a href="i1040x.pdf" download>           Instructions for Form 1040-X (Rev. February 2024)</a>|
-|46|<a href="i1041.pdf" download>           2023 Instructions for Form 1041 and Schedules A, B, G, J, and K-1 </a>|
-|47|<a href="i1065.pdf" download>           2023 Instructions for Form 1065 </a>|
-|48|<a href="i1099ac.pdf" download>           Instructions for Forms 1099-A and 1099-C (Rev. January 2022)</a>|
-|49|<a href="i1116.pdf" download>           2023 Instructions for Form 1116</a>|
-|50|<a href="i1120.pdf" download>           2023 Instructions for Form 1120</a>|
-|51|<a href="i2555.pdf" download>           2023 Instructions for Form 2555</a>|
-|52|<a href="i2848.pdf" download>           Instructions for Form 2848 (Rev. September 2021)</a>|
-|53|<a href="i3520.pdf" download>           Instructions for Form 3520 (Rev. December 2023)</a>|
-|54|<a href="i5471.pdf" download>           Instructions for Form 5471 (Rev. January 2024)</a>|
-|55|<a href="i706.pdf" download>           Instructions for Form 706 (Rev. September 2023)</a>|
-|56|<a href="i709.pdf" download>           2023 Instructions for Form 709</a>|
-|57|<a href="i843.pdf" download>           Instructions for Form 843 (Rev. December 2021)</a>|
-|58|<a href="i8606.pdf" download>           2023 Instructions for Form 8606</a>|
-|59|<a href="i8814.pdf" download>           2023 Instructions for Form 8814</a>|
-|60|<a href="i8821.pdf" download>           Instructions for Form 8821 (Rev. September 2021)</a>|
-|61|<a href="i8865.pdf" download>           2023 Instructions for Form 8865</a>|
-|62|<a href="i8936.pdf" download>           2023 Instructions for Form 8936</a>|
-|63|<a href="i8938.pdf" download>           Instructions for Form 8938  (Rev. November 2021)</a>|
-|64|<a href="i941.pdf" download>           Instructions for Form 941 (Rev. March 2024)</a>|
-|65|<a href="i9465.pdf" download>           Instructions for Form 9465 (Rev. July 2024)</a>|
-|66|<a href="iss4.pdf" download>           Instructions for Form SS-4 (Rev. December 2023)</a>|
-|67|<a href="iw2w3.pdf" download>           2024 General Instructions for Forms W-2 and W-3</a>|
-|68|<a href="iw7.pdf" download>           Instructions for Form W-7 (Rev. November 2023)</a>|
-|69|<a href="iw7sp.pdf" download>           Instrucciones para el Formulario W-7 (Rev. Noviembre 2023)</a>|
-|70|<a href="iw9.pdf" download>           Instructions for the  Requester of Form W-9 (Rev. March 2024)</a>|
-|71|<a href="p1660.pdf" download>           Publication 1660 (Rev. 1-2020)</a>|
-|72|<a href="p17.pdf" download>           2023 Publication 17</a>|
-|73|<a href="p216.pdf" download>           Publication 216 (3-1992)</a>|
-|74|<a href="p334.pdf" download>           2023 Publication 334</a>|
-|75|<a href="p3.pdf" download>           2023 Publication 3</a>|
-|76|<a href="p4012.pdf" download>           Publication 4012 (Rev. 10-2023)</a>|
-|77|<a href="p4245.pdf" download>           Publication 4245 (Rev. 2-2022)</a>|
-|78|<a href="p4491.pdf" download>           Publication 4491 (Rev. 10-2023)</a>|
-|79|<a href="p4491x.pdf" download>           Publication 4491-X (Rev. 2-2024)</a>|
-|80|<a href="p463.pdf" download>           2023 Publication 463</a>|
-|81|<a href="p505.pdf" download>           2024 Publication 505</a>|
-|82|<a href="p519.pdf" download>           2023 Publication 519</a>|
-|83|<a href="p525.pdf" download>           2023 Publication 525</a>|
-|84|<a href="p5477-IPPIN.pdf" download>           Publication 5477 (Rev. 7-2022) </a>|
-|85|<a href="p54.pdf" download>           2023 Publication 54</a>|
-|86|<a href="p555.pdf" download>           Publication 555 (Rev. March 2020)</a>|
-|87|<a href="p556.pdf" download>           Publication 556 (Rev. September 2013)</a>|
-|88|<a href="p559.pdf" download>           2023 Publication 559</a>|
-|89|<a href="p590b.pdf" download>           2023 Publication 590-B</a>|
-|90|<a href="p594.pdf" download>           Publication 594 (Rev. 5-2024)</a>|
-|91|<a href="p926.pdf" download>           2024 Publication 926</a>|
-|92|<a href="p970.pdf" download>           2023 Publication 970</a>|
+|:-|:-|
+|f1040es|<a href=/irs.ea/assets/pdfs/"f1040es.pdf" download> Subject:         Form 1040-ES, Estimated Tax for Individuals </a>|
+|f1040s1|<a href=/irs.ea/assets/pdfs/"f1040s1.pdf" download> Subject:         Additional Income and Adjustments to Income </a>|
+|f1040s2|<a href=/irs.ea/assets/pdfs/"f1040s2.pdf" download> Subject:         Additional Taxes </a>|
+|f1040s3|<a href=/irs.ea/assets/pdfs/"f1040s3.pdf" download> Subject:         Additional Credits and Payments </a>|
+|f1040s|<a href=/irs.ea/assets/pdfs/"f1040s.pdf" download> Subject:         U.S. Tax Return for Seniors </a>|
+|f1040x|<a href=/irs.ea/assets/pdfs/"f1040x.pdf" download> Subject:         Amended U.S. Individual Income Tax Return </a>|
+|f1041|<a href=/irs.ea/assets/pdfs/"f1041.pdf" download> Subject:         U.S. Income Tax Return for Estates and Trusts </a>|
+|f1065|<a href=/irs.ea/assets/pdfs/"f1065.pdf" download> Subject:         U.S. Return of Partnership Income </a>|
+|f1099c|<a href=/irs.ea/assets/pdfs/"f1099c.pdf" download> Subject:         Cancellation of Debt </a>|
+|f1099r|<a href=/irs.ea/assets/pdfs/"f1099r.pdf" download> Subject:         Distributions From Pensions, Annuities, Retirement or Profit-Sharing Plans, IRAs, Insurance Contracts, etc. </a>|
+|f1116|<a href=/irs.ea/assets/pdfs/"f1116.pdf" download> Subject:         Foreign Tax Credit (Individual, Estate, or Trust) </a>|
+|f1120|<a href=/irs.ea/assets/pdfs/"f1120.pdf" download> Subject:         U.S. Corporation Income Tax Return </a>|
+|f1127|<a href=/irs.ea/assets/pdfs/"f1127.pdf" download> Subject:         Application for Extension of Time for Payment of Tax Due to Undue Hardship </a>|
+|f12153|<a href=/irs.ea/assets/pdfs/"f12153.pdf" download> Subject:         Request for a Collection Due Process or Equivalent Hearing </a>|
+|f13614c|<a href=/irs.ea/assets/pdfs/"f13614c.pdf" download> Subject:         Intake/Interview and Quality Review Sheet </a>|
+|f14039|<a href=/irs.ea/assets/pdfs/"f14039.pdf" download> Subject:         Identity Theft Affidavit </a>|
+|f2555|<a href=/irs.ea/assets/pdfs/"f2555.pdf" download> Subject:         Foreign Earned Income </a>|
+|f2587|<a href=/irs.ea/assets/pdfs/"f2587.pdf" download> Subject:         Application for Special Enrollment Examination </a>|
+|f2848|<a href=/irs.ea/assets/pdfs/"f2848.pdf" download> Subject:         Power of Attorney and Declaration of Representative </a>|
+|f3520|<a href=/irs.ea/assets/pdfs/"f3520.pdf" download> Subject:         Annual Return To Report Transactions With Foreign Trusts and Receipt of Certain Foreign Gifts </a>|
+|f4506|<a href=/irs.ea/assets/pdfs/"f4506.pdf" download> Subject:         Request for Copy of Tax Return </a>|
+|f4506t|<a href=/irs.ea/assets/pdfs/"f4506t.pdf" download> Subject:         Request for Transcript of Tax Return </a>|
+|f4868-auto-extension|<a href=/irs.ea/assets/pdfs/"f4868-auto-extension.pdf" download> Subject:         Application for Automatic Extension of Time To File U.S. Individual Income Tax Return </a>|
+|f5471|<a href=/irs.ea/assets/pdfs/"f5471.pdf" download> Subject:         Information Return of U.S. Persons With Respect To Certain Foreign Corporations </a>|
+|f706|<a href=/irs.ea/assets/pdfs/"f706.pdf" download> Subject:         United States Estate (and Generation-Skipping Transfer) Tax Return </a>|
+|f843|<a href=/irs.ea/assets/pdfs/"f843.pdf" download> Subject:         Claim for Refund and Request for Abatement </a>|
+|f8453|<a href=/irs.ea/assets/pdfs/"f8453.pdf" download> Subject:         U.S. Individual Income Tax Transmittal for an IRS e-file Return </a>|
+|f8606|<a href=/irs.ea/assets/pdfs/"f8606.pdf" download> Subject:         Nondeductible IRAs </a>|
+|f8814|<a href=/irs.ea/assets/pdfs/"f8814.pdf" download> Subject:         Parents' Election To Report Child's Interest and Dividends </a>|
+|f8821|<a href=/irs.ea/assets/pdfs/"f8821.pdf" download> Subject:         Tax Information Authorization </a>|
+|f8879|<a href=/irs.ea/assets/pdfs/"f8879.pdf" download> Subject:         IRS e-file Signature Authorization </a>|
+|f8938|<a href=/irs.ea/assets/pdfs/"f8938.pdf" download> Subject:         Statement Of Specified Foreign Financial Assets </a>|
+|f8958|<a href=/irs.ea/assets/pdfs/"f8958.pdf" download> Subject:         Allocation of Tax Amounts Between Certain Individuals in Community Property States </a>|
+|f941|<a href=/irs.ea/assets/pdfs/"f941.pdf" download> Subject:         Employer's QUARTERLY Federal Tax Return </a>|
+|f9465|<a href=/irs.ea/assets/pdfs/"f9465.pdf" download> Subject:         Installment Agreement Request </a>|
+|filing_status_4012|<a href=/irs.ea/assets/pdfs/"filing_status_4012.pdf" download> Subject:         VITA/TCE Volunteer Resource Guide </a>|
+|fss4|<a href=/irs.ea/assets/pdfs/"fss4.pdf" download> Subject:         Application for Employer Identification Number </a>|
+|fw2|<a href=/irs.ea/assets/pdfs/"fw2.pdf" download> Subject:         Wage and Tax Statement </a>|
+|fw4|<a href=/irs.ea/assets/pdfs/"fw4.pdf" download> Subject:         Employee's Withholding Certificate </a>|
+|fw7|<a href=/irs.ea/assets/pdfs/"fw7.pdf" download> Subject:         Application for IRS Individual Taxpayer Identification Number </a>|
+|fw7sp|<a href=/irs.ea/assets/pdfs/"fw7sp.pdf" download> Subject:         Application for IRS Individual Taxpayer Identification Number (Spanish Version) </a>|
+|fw9|<a href=/irs.ea/assets/pdfs/"fw9.pdf" download> Subject:         Request for Taxpayer Identification Number and Certification </a>|
+|i1040gi|<a href=/irs.ea/assets/pdfs/"i1040gi.pdf" download> Subject:         1040, Instructions </a>|
+|i1040tt|<a href=/irs.ea/assets/pdfs/"i1040tt.pdf" download> Subject:         1040 TAX AND EARNED INCOME CREDIT TABLES,  </a>|
+|i1040x|<a href=/irs.ea/assets/pdfs/"i1040x.pdf" download> Subject:         Instructions for Form 1040-X, Amended U.S. Individual Income Tax Return (Use With the February 2024 Revision of Form 1040-X) </a>|
+|i1041|<a href=/irs.ea/assets/pdfs/"i1041.pdf" download> Subject:         Instructions for Form 1041 and Schedules A, B, G, J, and K-1 , U.S. Income Tax Return for Estates and Trusts </a>|
+|i1065|<a href=/irs.ea/assets/pdfs/"i1065.pdf" download> Subject:         Instructions for Form 1065 , U.S. Return of Partnership Income  </a>|
+|i1099ac|<a href=/irs.ea/assets/pdfs/"i1099ac.pdf" download> Subject:         Instructions for Forms 1099-A and 1099-C, Acquisition or Abandonment of Secured Property and Cancellation of Debt </a>|
+|i1116|<a href=/irs.ea/assets/pdfs/"i1116.pdf" download> Subject:         Instructions for Form 1116, Foreign Tax Credit  (Individual, Estate, or Trust) </a>|
+|i1120|<a href=/irs.ea/assets/pdfs/"i1120.pdf" download> Subject:         Instructions for Form 1120, U.S. Corporation Income Tax Return </a>|
+|i2555|<a href=/irs.ea/assets/pdfs/"i2555.pdf" download> Subject:         Instructions for Form 2555, Foreign Earned Income </a>|
+|i2848|<a href=/irs.ea/assets/pdfs/"i2848.pdf" download> Subject:         Instructions for Form 2848, Power of Attorney and Declaration of Representative </a>|
+|i3520|<a href=/irs.ea/assets/pdfs/"i3520.pdf" download> Subject:         Instructions for Form 3520, Annual Return To Report Transactions With Foreign Trusts and Receipt of Certain Foreign Gifts </a>|
+|i5471|<a href=/irs.ea/assets/pdfs/"i5471.pdf" download> Subject:         Instructions for Form 5471, Information Return of U.S. Persons  With Respect to Certain Foreign Corporations </a>|
+|i706|<a href=/irs.ea/assets/pdfs/"i706.pdf" download> Subject:         Instructions for Form 706, United States Estate (and Generation-Skipping Transfer) Tax Return </a>|
+|i709|<a href=/irs.ea/assets/pdfs/"i709.pdf" download> Subject:         Instructions for Form 709, United States Gift (and Generation-Skipping Transfer) Tax Return </a>|
+|i843|<a href=/irs.ea/assets/pdfs/"i843.pdf" download> Subject:         Instructions for Form 843, Claim for Refund and Request for Abatement </a>|
+|i8606|<a href=/irs.ea/assets/pdfs/"i8606.pdf" download> Subject:         Instructions for Form 8606, Nondeductible IRAs  </a>|
+|i8814|<a href=/irs.ea/assets/pdfs/"i8814.pdf" download> Subject:         Instructions for Form 8814, Parents’ Election To Report Child’s Interest and Dividends </a>|
+|i8821|<a href=/irs.ea/assets/pdfs/"i8821.pdf" download> Subject:         Instructions for Form 8821,  Tax Information Authorization </a>|
+|i8865|<a href=/irs.ea/assets/pdfs/"i8865.pdf" download> Subject:         Instructions for Form 8865, Return of U.S. Persons With Respect to Certain Foreign Partnerships </a>|
+|i8936|<a href=/irs.ea/assets/pdfs/"i8936.pdf" download> Subject:         Instructions for Form 8936, Clean Vehicle Credits (and Schedule A (Form 8936), Clean Vehicle Credit Amount)  </a>|
+|i8938|<a href=/irs.ea/assets/pdfs/"i8938.pdf" download> Subject:         Instructions for Form 8938 , Statement of Specified Foreign Financial Assets </a>|
+|i941|<a href=/irs.ea/assets/pdfs/"i941.pdf" download> Subject:         Instructions for Form 941, Employer's QUARTERLY Federal Tax Return </a>|
+|i9465|<a href=/irs.ea/assets/pdfs/"i9465.pdf" download> Subject:         Instructions for Form 9465, Installment Agreement Request (For use with Form 9465 (Rev. September 2020)) </a>|
+|iss4|<a href=/irs.ea/assets/pdfs/"iss4.pdf" download> Subject:         Instructions for Form SS-4, Application for Employer Identification Number (EIN) </a>|
+|iw2w3|<a href=/irs.ea/assets/pdfs/"iw2w3.pdf" download> Subject:         General Instructions for Forms W-2 and W-3, (Including Forms W-2AS, W-2CM, W-2GU, W-2VI, W-3SS, W-2c, and W-3c) </a>|
+|iw7|<a href=/irs.ea/assets/pdfs/"iw7.pdf" download> Subject:         Instructions for Form W-7, Application for IRS Individual Taxpayer Identification Number (Use with the August 2019 revision of Form W-7) </a>|
+|iw7sp|<a href=/irs.ea/assets/pdfs/"iw7sp.pdf" download> Subject:         Instrucciones para el Formulario W-7, Solicitud de Número de Identificación Personal del Contribuyente del Servicio de Impuestos Internos (Use estas instrucciones con el Formulario W-7 (Rev. septiembre de 2019)) </a>|
+|iw9|<a href=/irs.ea/assets/pdfs/"iw9.pdf" download> Subject:         Instructions for the  Requester of Form W-9, Request for Taxpayer Identification Number and Certification </a>|
+|p1660|<a href=/irs.ea/assets/pdfs/"p1660.pdf" download> Subject:         Collection Appeal Rights </a>|
+|p17|<a href=/irs.ea/assets/pdfs/"p17.pdf" download> Subject:         Your Federal Income Tax, For Individuals </a>|
+|p216|<a href=/irs.ea/assets/pdfs/"p216.pdf" download> Subject:         Conferences and Practice Requirements </a>|
+|p334|<a href=/irs.ea/assets/pdfs/"p334.pdf" download> Subject:         Tax Guide for Small Business, (For Individuals Who Use Schedule C) </a>|
+|p3|<a href=/irs.ea/assets/pdfs/"p3.pdf" download> Subject:         Armed Forces' Tax Guide </a>|
+|p4012|<a href=/irs.ea/assets/pdfs/"p4012.pdf" download> Subject:         VITA/TCE Volunteer Resource Guide </a>|
+|p4245|<a href=/irs.ea/assets/pdfs/"p4245.pdf" download> Subject:         Power of Attorney Preparation Guide </a>|
+|p4491|<a href=/irs.ea/assets/pdfs/"p4491.pdf" download> Subject:         VITA/TCE Training Guide </a>|
+|p4491x|<a href=/irs.ea/assets/pdfs/"p4491x.pdf" download> Subject:         VITA/TCE Training Guide </a>|
+|p463|<a href=/irs.ea/assets/pdfs/"p463.pdf" download> Subject:          Travel, Gift, and Car Expenses </a>|
+|p505|<a href=/irs.ea/assets/pdfs/"p505.pdf" download> Subject:         Tax  Withholding  and Estimated  Tax </a>|
+|p519|<a href=/irs.ea/assets/pdfs/"p519.pdf" download> Subject:         U.S. Tax Guide for Aliens </a>|
+|p525|<a href=/irs.ea/assets/pdfs/"p525.pdf" download> Subject:         Taxable and Nontaxable  Income </a>|
+|p5477-IPPIN|<a href=/irs.ea/assets/pdfs/"p5477-IPPIN.pdf" download> Subject:         All taxpayers now eligible for Identity Protection PINs  </a>|
+|p54|<a href=/irs.ea/assets/pdfs/"p54.pdf" download> Subject:         Tax Guide for U.S. Citizens and Resident Aliens Abroad </a>|
+|p555|<a href=/irs.ea/assets/pdfs/"p555.pdf" download> Subject:         Community Property </a>|
+|p556|<a href=/irs.ea/assets/pdfs/"p556.pdf" download> Subject:         Examination  of Returns, Appeal Rights, and Claims for Refund </a>|
+|p559|<a href=/irs.ea/assets/pdfs/"p559.pdf" download> Subject:         Survivors, Executors, and Administrators </a>|
+|p590b|<a href=/irs.ea/assets/pdfs/"p590b.pdf" download> Subject:         Distributions from Individual Retirement Arrangements (IRAs) </a>|
+|p594|<a href=/irs.ea/assets/pdfs/"p594.pdf" download> Subject:         The IRS Collection Process </a>|
+|p926|<a href=/irs.ea/assets/pdfs/"p926.pdf" download> Subject:         Household Employer's Tax Guide </a>|
+|p970|<a href=/irs.ea/assets/pdfs/"p970.pdf" download> Subject:         Tax Benefits for Education </a>|
